Non transient hamcrest dependency. More migrations to assertj.
Exclude hamcrest from parent junit dependency
Change scope of jupiter in it-test-support to provided
Cleanup transient hamcrest usage case.
Migrate security module to assertj
Remove hamcrest from test-utils
Remove hamcrest from tools
Remove hamcrest from metrics
Remove hamcrest from it-test-support
Remove hamcrest from io-test-utils
Migrate most of the enterprise kernel tests to assertj
Migrate most of the fabric its to assertj
Migrate bolt tests to assertj